[package]
name = "board"
version = "0.1.0"
authors = ["haus"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["desktop"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
manganis = "0.2.2"
dioxus-desktop = "0.5.1"
uart = "0.1.2"
modbus = "1.1.0"
log = "0.4.22"
